[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/sprites/background.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/op_button_text_background_left.png" type="Texture" id=2]
[ext_resource path="res://assets/scripts/Jogo.gd" type="Script" id=3]
[ext_resource path="res://assets/bd/bd_quiz_game.tres" type="Resource" id=4]

[node name="level_game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
bd_quiz = ExtResource( 4 )
color_right = Color( 0.298039, 0.917647, 0.0705882, 1 )
color_wrong = Color( 0.921569, 0.133333, 0.0745098, 1 )

[node name="background" type="Sprite" parent="."]
scale = Vector2( 0.703125, 0.843585 )
texture = ExtResource( 1 )
centered = false

[node name="question_info" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -285.0
margin_top = -198.0
margin_right = 290.0
margin_bottom = 26.0
alignment = 1
__meta__ = {
"_edit_group_": true
}

[node name="txt_question" type="Label" parent="question_info"]
margin_right = 575.0
margin_bottom = 70.0
rect_min_size = Vector2( 0, 70 )
size_flags_horizontal = 3

[node name="Panel" type="Panel" parent="question_info"]
margin_top = 74.0
margin_right = 575.0
margin_bottom = 224.0
rect_min_size = Vector2( 100, 150 )

[node name="question_image" type="TextureRect" parent="question_info/Panel"]
margin_right = 40.0
margin_bottom = 40.0
expand = true
stretch_mode = 6

[node name="question_audio" type="AudioStreamPlayer" parent="question_info/Panel"]

[node name="question_holder" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -313.0
margin_top = 55.0
margin_right = 755.0
margin_bottom = 209.0
rect_scale = Vector2( 0.6, 1 )
custom_constants/vseparation = 10
custom_constants/hseparation = 20
columns = 2

[node name="button_option_1" type="TextureButton" parent="question_holder"]
margin_right = 524.0
margin_bottom = 72.0
texture_normal = ExtResource( 2 )

[node name="button_option_2" type="TextureButton" parent="question_holder"]
margin_left = 544.0
margin_right = 1068.0
margin_bottom = 72.0
texture_normal = ExtResource( 2 )
flip_h = true

[node name="button_option_3" type="TextureButton" parent="question_holder"]
margin_top = 82.0
margin_right = 524.0
margin_bottom = 154.0
texture_normal = ExtResource( 2 )

[node name="button_option_4" type="TextureButton" parent="question_holder"]
margin_left = 544.0
margin_top = 82.0
margin_right = 1068.0
margin_bottom = 154.0
texture_normal = ExtResource( 2 )
flip_h = true
